<resources>
    <string name="app_name">DATN28102020</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="input_email">Nhập địa chỉ email</string>
    <string name="input_password">Nhập mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="txt_linkregister"><u>Đăng ký</u></string>
    <string name="repeat">Nhập lại mật khẩu</string>
    <string name="edt_name">Nhập họ và tên</string>
    <string name="Register">Đăng ký</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>