<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.LoginActivity">
    <ImageView
        android:id="@+id/iv_logo"
        android:src="@color/cardview_dark_background"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/tv_login"
        android:layout_below="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangnhap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="50sp"/>
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="50sp"
        android:hint="@string/input_email"
        />
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_email"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="50sp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:text="@string/btn_login"
        android:textSize="20sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bạn chưa có tài khoản ? "
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/txt_register"
            android:layout_toEndOf="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_linkregister"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>
</RelativeLayout>