<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.LoginActivity">
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="50sp"/>
    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_register"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="50sp"
        android:hint="@string/edt_name"
        />
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_name"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="50sp"
        android:hint="@string/input_email"
        />
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_email"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="50sp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/edt_repeatpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="50sp"
        android:hint="@string/repeat"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_repeatpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:text="Đăng ký"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_repeatpassword"
        android:layout_toStartOf="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50sp"
        android:text="Hủy"
        android:textSize="20sp"/>
</RelativeLayout>